kubernetes/apps/database/dragonfly/cluster/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: &app dragonfly
  name: dragonfly-observability
spec:
  podSelector:
    matchLabels:
      app: *app
      app.kubernetes.io/name: *app
      app.kubernetes.io/part-of: *app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/instance: kube-prometheus-stack
      ports:
        - port: 9999
          protocol: TCP
